deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-rtf-ingress
  namespace: rtf 
  labels:
    business-group: business-group-id
    environment: environment-id
spec:
  ingressClassName: rtf-nginx 
  tls: 
  - hosts:
      - apiopsrtf.eastus.cloudapp.azure.com
    secretName: example-tls
  rules:
  - host: apiopsrtf.eastus.cloudapp.azure.com
    http:
      paths: 
      - pathType: Prefix
        path: /
        backend: 
          service:
            name: service-name
            port:
              name: service-port
